--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.117.1",
+]
+
+[tool.ruff.lint]
+select = ["E", "F", "UP", "B", "SIM", "I", "FAST"]
