--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.30.0",
     "fastapi[standard]>=0.117.1",
+    "pydantic-settings>=2.10.1",
+    "sqlmodel>=0.0.25",
 ]
 
 [tool.ruff.lint]
