--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,15 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.5",
+    "argon2-cffi>=25.1.0",
     "asyncpg>=0.30.0",
+    "bcrypt>=5.0.0",
     "fastapi[standard]>=0.117.1",
+    "passlib>=1.7.4",
     "pydantic-settings>=2.10.1",
     "sqlmodel>=0.0.25",
 ]
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I", "FAST"]
+ignore = ["FAST002", "B008"]
