--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi[standard]>=0.117.1",
     "passlib>=1.7.4",
     "pydantic-settings>=2.10.1",
+    "pyjwt>=2.10.1",
     "sqlmodel>=0.0.25",
 ]
 
