--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ dependencies = [
     "argon2-cffi>=25.1.0",
     "asyncpg>=0.30.0",
     "bcrypt>=5.0.0",
-    "distutils",
+    "fastapi-mail>=1.5.0",
     "fastapi[standard]>=0.117.1",
+    "itsdangerous>=2.2.0",
     "passlib>=1.7.4",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
